<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/baseline_shopping_cart_black_48"
            android:title="@string/pending_orders" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_black_48"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/baseline_store_white_24"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_login_black_48"
            android:title="@string/logout" />
    </group>
</menu>