<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:menuCategory="alternative">
        <item
            android:id="@+id/bottom_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/bottom_category"
            android:icon="@drawable/baseline_category_white_24"
            android:title="@string/categories" />

        <item
            android:id="@+id/bottom_saved"
            android:icon="@drawable/ic_baseline_save_24"
            android:title="Saved" />

        <item
            android:id="@+id/bottom_service"
            android:icon="@drawable/baseline_home_repair_service_white_24"
            android:title="@string/service" />
    </group>
</menu>